updated mdm mode of integration